add server_app
