# app/server_app.py
@@ -2,13 +2,156 @@ from flask import Flask
 from flask import jsonify
 from flask import request
 
-from app.config import config
-from app.extensions import db
-from app.models import Criminals, Users, Users_reports
+import os
+
+# configs
+class Config:
+    SECRET_KEY = os.environ.get('SECRET_KEY') or 'hard to guess string'
+    @staticmethod
+    def init_app(app):
+        pass
+
+class ProductionConfig(Config):
+    MONGODB_HOST = os.environ.get('DATABASE_URL') or "mongodb+srv://tsilahadad:Noam3012@michal-sela-dspmm.gcp.mongodb.net/michal-sela?retryWrites=true&w=majority"
+       #  "mongodb+srv://Michal_sela:hackathon@cluster0-4bsi2.gcp.mongodb.net/Bad_guys?retryWrites=true&w=majority"
+
+
+    MONGODB_DB = os.environ.get('DB_NAME') or "Bad_guys"
+
+
+config = {
+    'production': ProductionConfig,
+    'default': ProductionConfig
+}
+
+# extensions
+from flask_mongoengine import MongoEngine
+
+db = MongoEngine()
+
+# models
+
+import time
+from datetime import datetime
+
+from mongoengine import *
+
+class Criminals(db.Document):
+    name = StringField(required=True)
+    birth_year = LongField(required=True)
+    city_of_residence = StringField(required=True)
+    felony = StringField(required=True)
+    verdict = LongField(required=True)
+    verdict_date = LongField(required=True)
+    # db_last_update_date = DateTimeField(default=datetime.now())
+    # db_last_update_date = LongField(default=int(time.time()))
+
+    def to_json(self):
+        json_person = {
+            'name': self.name,
+            'birth_year': self.birth_year,
+            'city_of_residence': self.city_of_residence,
+            'felony': self.felony,
+            'verdict': self.verdict,
+            'verdict_date': self.verdict_date,
+            # 'db_last_update_date': self.db_last_update_date,
+            # 'current_timestamp': datetime.now().strftime('%Y-%m-%d')
+        }
+        return json_person
+
+    @staticmethod
+    def from_json(json_person):
+        return Criminals(name=json_person.get('name'),
+                        birth_year=json_person.get('birth_year'),
+                        city_of_residence=json_person.get('city_of_residence'),
+                        felony=json_person.get('felony'),
+                        verdict=json_person.get('verdict'),
+                        verdict_date=json_person.get('verdict_date'))
+
+
+class Users(db.Document):
+    id_num = StringField(required=True)
+    firstName = StringField(required=True)
+    lastName = StringField(required=True)
+    token = StringField(required=True)
+    location = StringField(required=False)
+    twitter = StringField(required=False)
+    gender = StringField(required=False)
+    job = StringField(required=False)
+    pic = ListField(StringField(), default=list, required=False)
+    birthday = DateTimeField(required=False)
+    # db_last_update_date = DateTimeField(default=datetime.now())
+
+    def to_json(self):
+        json_user = {
+            'id_num': self.id_num,
+            'firstName': self.firstName,
+            'lastName': self.lastName,
+            'token': self.token,
+            'location': self.location,
+            'twitter': self.twitter,
+            'gender': self.gender,
+            'job': self.job,
+            'pic': self.pic,
+            'birthday': self.birthday,
+            # 'db_last_update_date': self.db_last_update_date,
+            # 'current_timestamp': datetime.now().strftime('%Y-%m-%d')
+        }
+        return json_user
+
+    @staticmethod
+    def from_json(json_user):
+        return Users(
+            id_num=json_user.get('id_num'),
+            firstName=json_user.get('firstName'),
+            lastName=json_user.get('lastName'),
+            token=json_user.get('token'),
+            location=json_user.get('location'),
+            twitter=json_user.get('twitter'),
+            gender=json_user.get('gender'),
+            job=json_user.get('job'),
+            pic=json_user.get('pic'),
+            birthday=json_user.get('birthday'))
+
+
+class Users_reports(db.Document):
+    token = StringField(required=True)
+    suspected = BooleanField(required=True)
+    firstName = StringField(required=True)
+    LastName = StringField(required=True)
+    report = DictField(required=False)
+    resultsCount = IntField(required=False)
+    # db_last_update_date = DateTimeField(default=datetime.now())
+
+    def to_json(self):
+        json_report = {
+            'token': self.token,
+            'suspected': self.suspected,
+            'firstName': self.firstName,
+            'LastName': self.LastName,
+            'report': self.report,
+            'resultsCount': self.resultsCount
+            # 'db_last_update_date': self.db_last_update_date,
+            # 'current_timestamp': datetime.now().strftime('%Y-%m-%d')
+        }
+        return json_report
+
+    @staticmethod
+    def from_json(json_report):
+        return Users_reports(
+            token=json_report.get('token'),
+            suspected=json_report.get('suspected'),
+            firstName=json_report.get('firstName'),
+            LastName=json_report.get('LastName'),
+            report=json_report.get('report'),
+            resultsCount=json_report.get('resultsCount'))
+
 
 app = Flask(__name__)
 app.config.from_object(config['production'])
 config['production'].init_app(app)
+#app.config['MONGO_HOST'] = "mongodb+srv://tsilahadad:Noam3012@michal-sela-dspmm.gcp.mongodb.net/michal-sela?retryWrites=true&w=majority"
+#app.config["MONGODB_DATABASE"] = 'michal-sela'
 db.init_app(app)
 
 
